<resources>
    <string name="app_name">CourseraSemana2</string>

    <string name="et_nombre">Nombre Completo</string>
    <string name="tv_fecha">Fecha Nacimiento</string>
    <string name="et_fecha">Seleccione fecha de nacimiento</string>
    <string name="et_telefono">Teléfono</string>
    <string name="tel">Tel:</string>
    <string name="et_email">E-mail</string>
    <string name="email">E-mail:</string>
    <string name="et_descripcion">Descripción Contacto</string>
    <string name="descr">Descripción:</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="fecha_nac">Fecha Nacimiento</string>
    <string name="tv_confirmar">Confirmar Datos</string>
    <string name="btn_editar">Editar Datos</string>

</resources>